# funcdoodle

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  All  CMakeLists.txt  Doxyfile  Doxyfile.in  README.md  imgui.ini  iu.fdp  proj.fdp
.github/workflows/: docs.yml
cmake/: FuncDoodleBuild.cmake  FuncDoodleIncludes.cmake  FuncDoodlePlatform.cmake  FuncDoodleSources.cmake
doc/: FDP.md  TODO.md
imtest/: MainTests.cc
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
release/: funcdoodle-linux-tiling.tar.xz  funcdoodle-linux.tar.xz  funcdoodle-macos-arm64.tar.xz  funcdoodle-macos-x86_64.tar.xz
release/FuncDoodle-arm64.app/Contents/MacOS/: FuncDoodle-arm64
release/FuncDoodle-arm64.app/Contents/MacOS/themes/: catppuccinLatte.toml  catppuccinMacchiato.toml  catppuccinMocha.toml  classic.toml  dark.toml  funcdoodle.toml  light.toml
scripts/: build.bat  build.sh  build_app.sh  build_cross.sh  build_release.sh  docs.sh  fix.sh  imtest.bat  imtest.sh  lint.sh  screenshot.sh  test.bat  test.sh
src/: Action.cc  Action.h  App.cc  App.h  AppSettings.h  AssetLoader.cc  AssetLoader.h  Audio.h  AudioManager.h  Constants.h  DynArr.cc  DynArr.h  EditorController.cc  EditorController.h  ExePath.h  Frame.cc  Frame.h  FrameRenderer.cc  FrameRenderer.h  FuncDoodle.h  Grid.cc  Grid.h  Gui.h  ImUtil.h  KeyHandler.cc  KeyHandler.h  Keybinds.cc  Keybinds.h  LoadedAssets.h  MacroUtils.cc  MacroUtils.h  Main.cc  Manager.cc  Manager.h  Player.cc  Player.h  PopupRegistry.cc  PopupRegistry.h  Project.cc  Project.h  (+16 more)
src/Action/: Action.h  Common.cc  Common.h  Core.cc  Core.h  Direction.h  Frame.cc  Frame.h  Selection.cc  Selection.h
src/Asset/: AssetLoader.cc  AssetLoader.h  LoadedAssets.cc  LoadedAssets.h
src/Audio/: AudioManager.cc  AudioManager.h
src/Conf/: Constants.h  FuncDoodle.h  FuncPCH.h  imgui.ini
src/Core/: App.cc  App.h  AppSettings.h  Grid.cc  Grid.h  Manager.cc  Manager.h  Player.cc  Player.h
src/Drawing/: EditorController.cc  EditorController.h
src/Keybinds/: KeyHandler.cc  KeyHandler.h  Keybinds.cc  Keybinds.h
src/Platform/: Window.cc  Window.h
src/Project/: DynArr.cc  DynArr.h  Frame.cc  Frame.h  Project.cc  Project.h
src/Registries/: PopupRegistry.cc
src/Rendering/: FrameRenderer.cc  FrameRenderer.h
src/Selection/: Selection.cc  Selection.h
src/Test/: Test.cc
src/Tool/: Tool.h  ToolManager.cc  ToolManager.h
src/UI/: Gui.h  ImUtil.h  Themes.h  UIManager.cc  UIManager.h
src/Util/: ExePath.h  Macro.h  MacroUtils.cc  MacroUtils.h  Ptr.h  TextUtil.cc  TextUtil.h  UUID.cc
test/: Action.cc  Col.cc  Exepath.cc  Frame.cc  General.cc  ImageArray.cc  Lia.cc  Uuid.cc
themes/: catppuccinFrappe.toml  catppuccinLatte.toml  catppuccinMacchiato.toml  catppuccinMocha.toml  classic.toml  dark.toml  funcdoodle.toml  light.toml
